--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -134,7 +134,7 @@
             name: 'Kitchen Sink',
             version: '2.0',
             sugars: ['map', 'pull'],
-            resources: ['app/sections/layouts.html',
+            resources: ['app/sections/layout.html',
                         'app/sections/notification.html',
                         'app/sections/list.html',
                         'app/sections/icon.html',
