--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -101,7 +101,7 @@
     <script src="../../release/lungo.js"></script>
     -->
     <script src="../../src/Lungo.js"></script>
-    <script src="../../src/Lungo.init.js"></script>
+    <script src="../../src/Lungo.Init.js"></script>
     <script src="../../src/Lungo.Core.js"></script>
     <script src="../../src/Lungo.Dom.js"></script>
     <script src="../../src/Lungo.Service.js"></script>
