New style for input=range

--- a/examples/kitchen-sink/test.html
+++ b/examples/kitchen-sink/test.html
@@ -74,7 +74,46 @@
             </nav>
         </footer>
 
-        <article id="layout-art1"></article>
+        <article id="layout-art1" class="padding">
+            <form>
+                <label>text</label>
+                <input type="text"/>
+                <!--
+                <label>text.disabled</label>
+                <input type="text" disabled/>
+                <label>password</label>
+                <input type="password"/>
+
+                <label>textarea</label>
+                <textarea></textarea>
+            -->
+
+
+                <label>Example of select</label>
+                <label class="select">
+                    <select class="custom">
+                        <option value="1">One</option>
+                        <option value="2">Two</option>
+                        <option value="3">Three</option>
+                    </select>
+                </label>
+
+
+                <label>Example of progress</label>
+                <div id="progress-normal" data-progress="25%"></div>
+
+                <label>Example of range</label>
+                <input type="range" placeholder="type your name" />
+
+                 <input type="range" min="0" max="1" class="checkbox left" value="0">
+                <input type="range" min="0" max="1" class="checkbox right active" value="1">
+
+                </form>
+                &nbsp;
+                <form>
+                <a href="#" class="button big theme" data-label="Boton Azul" data-icon="check"></a>
+            </form>
+        </article>
         <article id="layout-art2"></article>
         <article id="layout-art3"></article>
         <article id="layout-art4"></article>
