Change <markup/> for kitchensinks

--- a/examples/kitchen-sink/index.html
+++ b/examples/kitchen-sink/index.html
@@ -50,10 +50,10 @@
 <body class="app">
     <section id="main" data-transition="slide">
         <header  class="">
-            <nav class="left button">
+            <nav class="left ">
                 <a href="#features" data-router="aside" data-icon="menu"></a>
             </nav>
-            <nav class="right button">
+            <nav class="right ">
                 <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" data-icon="share" target="_blank" ></a>
             </nav>
             <div class="left">
