--- a/examples/kitchen-sink/app/sections/form.html
+++ b/examples/kitchen-sink/app/sections/form.html
@@ -5,44 +5,50 @@
         </nav>
     </header>
 
-    <article class="list scroll">
-        <ul>
-            <li class="contrast">
-                    <input type="search" placeholder="type your search" />
-                    <a href="#" class="button theme" data-icon="search"></a>
-                </li>
-            <li>
-                <label>Example of text</label>
-                <input type="text" placeholder="type your name" />
-            </li>
-            <li>
-                <label>Example of textarea</label>
-                <textarea placeholder="type your name"></textarea>
-            </li>
-            <li>
-                <label>Example of select</label>
+    <article class="scroll list">
+            <form>
+                <input type="search" placeholder="type your search" />
+                <a href="#" class="button theme" data-icon="search"></a>
+
+                <div class="six columns">
+                    <label>Address</label>
+                    <input type="text" placeholder="placeholder"/>
+                </div>
+                <div class="three columns right">
+                    <label>Pin Code</label>
+                    <input type="password" value="value" disabled/>
+                </div>
+                <textarea></textarea>
+
+                <label>Select your skill</label>
                 <label class="select">
                     <select class="custom">
-                        <option value="1">One</option>
+                        <option value="1">HTML5 Jedi</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                     </select>
                 </label>
-            </li>
-            <li  class="padding">
-                <label>Do you like Lungo forms?</label>
-                <label class="checkbox right"><input type="checkbox" id="checkbox-0" checked/></label>
-            </li>
-            <li class="padding">
-                <label>Example of progress</label>
+
+
+                <label>Progress of project</label>
                 <div id="progress-normal" data-progress="25%"></div>
-            </li>
-            <li>
-                <label>Example of range</label>
+
+                <label>Range 50%</label>
                 <input type="range" placeholder="type your name" />
 
-            </li>
+                <div class="one row">
+                    <input type="range" min="0" max="1" class="checkbox left" value="0">
+                    <input type="range" min="0" max="1" class="checkbox right active" value="1">
+                </div>
+                    <div class="four columns left">
+                        <a href="#" class="button big theme" data-label="Accept" data-icon="check"></a>
+                    </div>
+                    <div class="four columns right">
+                        <a href="#" class="button big red" data-label="Cancel" data-icon="close"></a>
+                    </div>
+            </form>
         </ul>
+
 
     </article>
 </section>
