--- a/examples/kitchen-sink/carousel.html
+++ b/examples/kitchen-sink/carousel.html
@@ -107,26 +107,29 @@
     <script src="../../src/Lungo.Dom.js"></script>
     <script src="../../src/Lungo.Service.js"></script>
     <script src="../../src/Lungo.Constants.js"></script>
-    <script src="../../src/Lungo.Element.js"></script>
     <script src="../../src/Lungo.Events.js"></script>
     <script src="../../src/Lungo.Notification.js"></script>
+    <script src="../../src/Lungo.Fallback.js"></script>
+
     <script src="../../src/router/Lungo.Router.js"></script>
     <script src="../../src/router/Lungo.Router.History.js" ></script>
-    <script src="../../src/view/Lungo.View.Resize.js"></script>
+
     <script src="../../src/view/Lungo.View.Article.js" ></script>
     <script src="../../src/view/Lungo.View.Aside.js" ></script>
-    <script src="../../src/view/Lungo.View.Element.js"></script>
 
-
-    <script src="../../src/view/Lungo.View.Pull.js"></script>
-    <script src="../../src/view/Lungo.View.Carousel.js"></script>
-
+    <script src="../../src/element/Lungo.Element.Cache.js"></script>
+    <script src="../../src/element/Lungo.Element.Carousel.js"></script>
+    <script src="../../src/element/Lungo.Element.Count.js"></script>
+    <script src="../../src/element/Lungo.Element.Loading.js"></script>
+    <script src="../../src/element/Lungo.Element.Progress.js"></script>
+    <script src="../../src/element/Lungo.Element.Pull.js"></script>
 
     <script src="../../src/data/Lungo.Data.Cache.js"></script>
     <script src="../../src/data/Lungo.Data.Sql.js"></script>
     <script src="../../src/data/Lungo.Data.Storage.js"></script>
+
     <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
-    <script src="../../src/Lungo.Fallback.js"></script>
+
     <script src="../../src/boot/Lungo.Boot.Resources.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
     <script src="../../src/boot/Lungo.Boot.Layout.js"></script>
