--- a/examples/kitchen-sink/app/sections/form.html
+++ b/examples/kitchen-sink/app/sections/form.html
@@ -5,7 +5,7 @@
         </nav>
     </header>
 
-    <article class="scroll list">
+    <article class="scroll">
             <form>
                 <input type="search" placeholder="type your search" />
                 <a href="#" class="button theme" data-icon="search"></a>
