Change folder of kitchen-sink

--- a/kitchen-sink/carousel.html
+++ b/kitchen-sink/carousel.html
@@ -19,23 +19,23 @@
 
     <!-- Main Stylesheet -->
 
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.base.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.nav.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.aside.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.article.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.list.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.layout.grid.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.splash.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.button.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.form.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.colour.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.icon.brand.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.loading.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.widgets.notification.css">
-    <link rel="stylesheet" href="../../src/stylesheets/css/Lungo.theme.default.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.base.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.nav.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.aside.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.article.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.list.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.grid.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.splash.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.button.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.form.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.colour.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.icon.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.icon.brand.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.loading.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.notification.css">
+    <link rel="stylesheet" href="../src/stylesheets/css/Lungo.theme.default.css">
 
     <!--
     <link rel="stylesheet" href="../../release/lungo.css">
@@ -99,44 +99,44 @@
     </section>
 
     <!-- Lungo dependencies -->
-    <script src="../../src/lib/quo.js"></script>
+    <script src="../src/lib/quo.js"></script>
 
-    <script src="../../src/Lungo.js"></script>
-    <script src="../../src/Lungo.Init.js"></script>
-    <script src="../../src/Lungo.Core.js"></script>
-    <script src="../../src/Lungo.Dom.js"></script>
-    <script src="../../src/Lungo.Service.js"></script>
-    <script src="../../src/Lungo.Constants.js"></script>
-    <script src="../../src/Lungo.Events.js"></script>
-    <script src="../../src/Lungo.Notification.js"></script>
-    <script src="../../src/Lungo.Fallback.js"></script>
+    <script src="../src/Lungo.js"></script>
+    <script src="../src/Lungo.Init.js"></script>
+    <script src="../src/Lungo.Core.js"></script>
+    <script src="../src/Lungo.Dom.js"></script>
+    <script src="../src/Lungo.Service.js"></script>
+    <script src="../src/Lungo.Constants.js"></script>
+    <script src="../src/Lungo.Events.js"></script>
+    <script src="../src/Lungo.Notification.js"></script>
+    <script src="../src/Lungo.Fallback.js"></script>
 
-    <script src="../../src/router/Lungo.Router.js"></script>
-    <script src="../../src/router/Lungo.Router.History.js" ></script>
+    <script src="../src/router/Lungo.Router.js"></script>
+    <script src="../src/router/Lungo.Router.History.js" ></script>
 
-    <script src="../../src/view/Lungo.View.Article.js" ></script>
-    <script src="../../src/view/Lungo.View.Aside.js" ></script>
+    <script src="../src/view/Lungo.View.Article.js" ></script>
+    <script src="../src/view/Lungo.View.Aside.js" ></script>
 
-    <script src="../../src/element/Lungo.Element.Cache.js"></script>
-    <script src="../../src/element/Lungo.Element.Carousel.js"></script>
-    <script src="../../src/element/Lungo.Element.Count.js"></script>
-    <script src="../../src/element/Lungo.Element.Loading.js"></script>
-    <script src="../../src/element/Lungo.Element.Progress.js"></script>
-    <script src="../../src/element/Lungo.Element.Pull.js"></script>
+    <script src="../src/element/Lungo.Element.Cache.js"></script>
+    <script src="../src/element/Lungo.Element.Carousel.js"></script>
+    <script src="../src/element/Lungo.Element.Count.js"></script>
+    <script src="../src/element/Lungo.Element.Loading.js"></script>
+    <script src="../src/element/Lungo.Element.Progress.js"></script>
+    <script src="../src/element/Lungo.Element.Pull.js"></script>
 
-    <script src="../../src/data/Lungo.Data.Cache.js"></script>
-    <script src="../../src/data/Lungo.Data.Sql.js"></script>
-    <script src="../../src/data/Lungo.Data.Storage.js"></script>
+    <script src="../src/data/Lungo.Data.Cache.js"></script>
+    <script src="../src/data/Lungo.Data.Sql.js"></script>
+    <script src="../src/data/Lungo.Data.Storage.js"></script>
 
-    <script src="../../src/attributes/Lungo.Attributes.Data.js"></script>
+    <script src="../src/attributes/Lungo.Attributes.Data.js"></script>
 
-    <script src="../../src/boot/Lungo.Boot.Resources.js" ></script>
-    <script src="../../src/boot/Lungo.Boot.Stats.js" ></script>
-    <script src="../../src/boot/Lungo.Boot.Layout.js"></script>
-    <script src="../../src/boot/Lungo.Boot.Events.js"></script>
-    <script src="../../src/boot/Lungo.Boot.Data.js"></script>
-    <script src="../../src/boot/Lungo.Boot.Section.js"></script>
-    <script src="../../src/boot/Lungo.Boot.Article.js"></script>
+    <script src="../src/boot/Lungo.Boot.Resources.js" ></script>
+    <script src="../src/boot/Lungo.Boot.Stats.js" ></script>
+    <script src="../src/boot/Lungo.Boot.Layout.js"></script>
+    <script src="../src/boot/Lungo.Boot.Events.js"></script>
+    <script src="../src/boot/Lungo.Boot.Data.js"></script>
+    <script src="../src/boot/Lungo.Boot.Section.js"></script>
+    <script src="../src/boot/Lungo.Boot.Article.js"></script>
 
     <!-- LungoJS - Sandbox App -->
     <script>
