Toggle between developemt/production

--- a/kitchen-sink/index.html
+++ b/kitchen-sink/index.html
@@ -18,7 +18,6 @@
     <link rel="apple-touch-startup-image" href="http://lungo.tapquo.com/resources/default.png">
 
     <!-- Main Stylesheet -->
-
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.base.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.layout.nav.css">
@@ -36,12 +35,11 @@
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.loading.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.widgets.notification.css">
     <link rel="stylesheet" href="../src/stylesheets/css/Lungo.theme.default.css">
-
-        <!--
-    <link rel="stylesheet" href="../../release/lungo.css">
-    <link rel="stylesheet" href="../../release/lungo.icon.css">
-    <link rel="stylesheet" href="../../release/lungo.icon.brand.css">
-    <link rel="stylesheet" href="../../release/lungo.theme.default.css">
+    <!--
+    <link rel="stylesheet" href="../package/lungo.css">
+    <link rel="stylesheet" href="../package/lungo.icon.css">
+    <link rel="stylesheet" href="../package/lungo.icon.brand.css">
+    <link rel="stylesheet" href="../package/lungo.theme.default.css">
     -->
     <!-- App Stylesheet -->
     <link rel="stylesheet" href="stylesheets/app.css">
@@ -95,7 +93,7 @@
     <!-- Lungo dependencies -->
     <script src="../src/lib/quo.debug.js"></script>
     <!--
-    <script src="../../release/lungo.js"></script>
+    <script src="../package/lungo.js"></script>
     -->
     <script src="../src/Lungo.js"></script>
     <script src="../src/Lungo.Init.js"></script>
